# peerlink

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Doxyfile  FUNDING.yml  LICENSE  OPERATIONS.md  PROMOTION.md  PROMOTION_CONTENT.md  README-zh.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_PREPARATION_REPORT.md  TEST_COVERAGE_ANALYSIS.md  coverage.json  coverage_report.json  docker-compose.yml  pyproject.toml
client_sdk/: .gitignore  BUILD_AND_RELEASE.md  CHANGELOG.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  README.md  bandit_report.json  build.sh  bump_version.sh  publish.sh  pyproject.toml
client_sdk/.github/workflows/: build.yml  release.yml
client_sdk/conda/: build.sh  meta.yaml
client_sdk/docs/: API_REFERENCE.md  BEST_PRACTICES.md  QUICKSTART.md  RELEASE_GUIDE.md
client_sdk/examples/: basic_usage.py  multi_channel.py
client_sdk/src/: p2p_client.py
client_sdk/src/p2p_sdk/: __init__.py  client.py  exceptions.py  nat_detection.py  protocol.py  signaling.py  transport.py
client_sdk/tests/: __init__.py  test_nat_detection.py  test_protocol.py
interop-tests/cpp-go-interop/: CMakeLists.txt  test_cpp_to_go.cpp  test_network_interop  test_network_interop.cpp
p2p-cpp/: .gitignore  CMakeLists.txt  DELIVERY_REPORT.md  FINAL_DELIVERY_SUMMARY.md  FINAL_VERIFICATION.md  PROJECT_STATUS.md  QUICK_START.md  README.md
p2p-cpp/.github/workflows/: ci.yml  release.yml
p2p-cpp/build_coverage/: coverage.info  coverage_filtered.info
p2p-cpp/build_coverage/coverage_html/: cmd_line
p2p-cpp/build_coverage/examples/basic/: basic_client
p2p-cpp/build_coverage/tests/detection/: device_detector_test
p2p-cpp/build_coverage/tests/did/: test_did_service
p2p-cpp/build_coverage/tests/integration/: test_e2e_integration  test_multi_client
p2p-cpp/build_coverage/tests/stun/: stun_message_test  stun_server_test
p2p-cpp/build_coverage/tests/unit/: test_nat  test_protocol  test_transport
p2p-cpp/docker/: Dockerfile.did  Dockerfile.relay  Dockerfile.signaling  Dockerfile.stun  build.sh  push.sh  test.sh
p2p-cpp/docs/: ANALYSIS_PLAN.md  ANALYSIS_PROGRESS_REPORT.md  ARCHITECTURE_COMPLETION_REPORT.md  FINAL_ANALYSIS_SUMMARY.md  INITIAL_COMPARISON.md  NEW_TASKS_SUMMARY.md  OPENSOURCE_COMPARISON.md  PYTHON_CPP_COMPARISON.md  PYTHON_CPP_FEATURE_COMPARISON.md  RATE_LIMITING.md  SESSION_LOOKUP_OPTIMIZATION.md  TEST_COVERAGE_ANALYSIS.md
p2p-cpp/docs/design/: ARCHITECTURE.md  MIGRATION.md  MODULE_INTERFACES.md
p2p-cpp/examples/: CMakeLists.txt  dcutr_nat_integration.cpp
p2p-cpp/examples/basic/: CMakeLists.txt  basic_client.cpp
p2p-cpp/include/p2p/core/: connection.hpp  engine.hpp  event.hpp  p2p_client.hpp  tcp_connection.hpp  types.hpp  varint.hpp
p2p-cpp/include/p2p/crypto/: ed25519_signer.hpp  signed_envelope.hpp
p2p-cpp/include/p2p/detection/: device_detector.hpp  device_vendor.hpp
p2p-cpp/include/p2p/nat/: connection.hpp  multiaddr_converter.hpp  puncher.hpp  stun_client.hpp
p2p-cpp/include/p2p/net/: socket.hpp
p2p-cpp/include/p2p/protocol/: dcutr.hpp  dcutr_message.hpp  message.hpp  negotiator.hpp  relay_message.hpp  stun.hpp
p2p-cpp/include/p2p/transport/: udp_transport.hpp
p2p-cpp/include/servers/did/: did_auth.hpp  did_crypto.hpp  did_handler.hpp  did_server.hpp  did_storage.hpp
p2p-cpp/packaging/: build_rpm.sh
p2p-cpp/proto/: CMakeLists.txt  dcutr.proto  relay_v2.proto
p2p-cpp/scripts/: build.sh
p2p-cpp/src/bindings/c/: p2p_client.h
p2p-cpp/src/core/: CMakeLists.txt  multiaddr.cpp  p2p_client.cpp  tcp_connection.cpp  varint.cpp
p2p-cpp/src/crypto/: CMakeLists.txt  ed25519_signer.cpp  signed_envelope.cpp
p2p-cpp/src/detection/: CMakeLists.txt  device_detector.cpp  device_vendor.cpp
p2p-cpp/src/nat/: CMakeLists.txt  connection.cpp  multiaddr_converter.cpp  puncher.cpp  stun_client.cpp
p2p-cpp/src/net/: CMakeLists.txt  socket.cpp
p2p-cpp/src/platform/: CMakeLists.txt
p2p-cpp/src/proto/: dcutr.pb.cc  dcutr.pb.h  relay_v2.pb.cc  relay_v2.pb.h
p2p-cpp/src/protocol/: CMakeLists.txt  dcutr.cpp  dcutr_message.cpp  message.cpp  negotiator.cpp  relay_message.cpp  stun.cpp
p2p-cpp/src/security/: CMakeLists.txt
p2p-cpp/src/servers/did/: CMakeLists.txt  did_auth.cpp  did_crypto.cpp  did_handler.cpp  did_server.cpp  did_storage.cpp  main.cpp
p2p-cpp/src/servers/relay/: CMakeLists.txt  COMPLETION_REPORT.md  README.md  (+14 more)
p2p-cpp/src/transport/: CMakeLists.txt  udp_transport.cpp
p2p-cpp/src/utils/: CMakeLists.txt
p2p-cpp/tests/: CMakeLists.txt  TEST_SUMMARY.md
p2p-cpp/tests/detection/: CMakeLists.txt  device_detector_test.cpp  test_device_vendor.cpp
p2p-cpp/tests/did/: CMakeLists.txt  TASK_23_PREPARATION.md  test_did_auth.cpp  test_did_crypto.cpp  test_did_handler.cpp  test_did_server.cpp  test_did_storage.cpp
p2p-cpp/tests/did_integration/: README.md  conftest.py  docker-compose.yml  requirements.txt  run_tests.sh  verify_tests.py
p2p-cpp/tests/integration/: CMakeLists.txt  p2p_test_framework.cpp  p2p_test_framework.hpp  test_dcutr_integration.cpp  test_e2e_integration.cpp  test_helpers.cpp  test_helpers.hpp  test_multi_client.cpp  test_p2p_connection.cpp  test_relay_forwarding.cpp  test_relay_v2_integration.cpp
p2p-cpp/tests/nat/: CMakeLists.txt  test_stun_client.cpp
p2p-cpp/tests/security/: CMakeLists.txt  test_relay_v2_security.cpp
p2p-cpp/tests/servers/: CMakeLists.txt
p2p-cpp/tests/stun/: CMakeLists.txt  TEST_COVERAGE.md  stun_message_test.cpp  stun_server_test.cpp
p2p-cpp/tests/system/: README.md  conftest.py  docker-compose.yml  requirements.txt  run_tests.sh  verify_tests.py
p2p-cpp/tests/unit/: CMakeLists.txt  test_message_validation.cpp  test_multiaddr.cpp  test_nat.cpp  test_protocol.cpp  test_tcp_connection.cpp  test_transport.cpp  test_varint.cpp
signaling-server-cpp/: CMakeLists.txt  README.md
signaling-server-cpp/examples/: CMakeLists.txt
signaling-server-cpp/include/: connection_manager.hpp  websocket_session.hpp
signaling-server-cpp/src/: connection_manager.cpp  main.cpp  message_handler.cpp  models.cpp  websocket_session.cpp
signaling-server-cpp/tests/: CMakeLists.txt
(+6007 files in other folders)
